[package]
name = "egui-win32"
version = "0.1.0"
edition = "2021"
license = "MIT"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clipboard-win = "4.5.0"
egui = "0.22.0"
windows = { version = "0.58", features = [
    "Wdk_System_SystemInformation",
    "Win32_Foundation",
    "Win32_System_WindowsProgramming",
    "Win32_UI_Input_KeyboardAndMouse",
] }
